--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.8.0",
     "@mui/x-data-grid": "^5.11.1",
     "dayjs": "^1.11.2",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "ic-stoic-identity": "^2.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.0.0",
