--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
     "@mui/x-data-grid": "^5.11.1",
+    "@tanstack/react-query": "^4.1.0",
+    "@tanstack/react-query-devtools": "^4.0.10",
     "dayjs": "^1.11.2",
-    "eslint-plugin-react-hooks": "^4.5.0",
     "ic-stoic-identity": "^2.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.0.0",
@@ -37,6 +38,7 @@
     "autoprefixer": "^10.4.7",
     "eslint": "^8.16.0",
     "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "husky": "^8.0.0",
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
