--- a/package.json
+++ b/package.json
@@ -4,29 +4,36 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --mode prod",
+    "build-test": "tsc && vite build --mode test",
+    "build-prod": "tsc && vite build --mode prod",
     "preview": "vite preview",
     "prepare": "husky install"
   },
   "dependencies": {
-    "@dfinity/agent": "^0.11.2",
-    "@dfinity/nns": "^0.4.0",
-    "@dfinity/principal": "^0.11.2",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@dfinity/agent": "latest",
+    "@dfinity/nns": "latest",
+    "@dfinity/principal": "latest",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.8.0",
-    "@mui/material": "^5.8.0",
+    "@mui/material": "^5.10.12",
     "@mui/x-data-grid": "^5.11.1",
-    "@tanstack/react-query": "^4.1.0",
-    "@tanstack/react-query-devtools": "^4.0.10",
-    "dayjs": "^1.11.2",
+    "@nnsdao/nnsdao-kit": "github:NnsDao/nnsdao-kit#dev",
+    "@tanstack/react-query": "^4.14.1",
+    "@tanstack/react-query-devtools": "^4.14.1",
+    "dayjs": "^1.11.6",
     "ic-stoic-identity": "^2.0.0",
-    "normalize.css": "^8.0.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0",
-    "recoil": "^0.7.3-alpha.2",
-    "usehooks-ts": "^2.5.3"
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.1",
+    "react-hot-toast": "^2.4.0",
+    "react-router-dom": "^6.4.3",
+    "react-share": "^4.4.1",
+    "react-spinners": "^0.13.6",
+    "ts-toolbelt": "^9.6.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
@@ -35,7 +42,8 @@
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "@vitejs/plugin-react": "^1.3.0",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.13",
+    "caniuse-lite": "^1.0.30001429",
     "eslint": "^8.16.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
@@ -44,8 +52,7 @@
     "postcss-import": "^14.1.0",
     "prettier": "2.6.2",
     "rollup-plugin-visualizer": "^5.6.0",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.7.3",
-    "vite": "^2.9.9"
+    "typescript": "^4.8.4",
+    "vite": "^2.9.15"
   }
 }
